# brainfreeze

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.txt  NOTICE.txt  README.md  README.txt  TODO.txt  azure-pipelines.yml  buildall.sh  cpp.hint  wixpatch.xml
cmake/: ClangTidy.cmake  CppSanitizers.cmake
extra/googletest/: CMakeLists.txt
samples/: ECHO2.BF  morse.bf  rot13.bf
scripts/: RegressionTester.py  RunRegressionTests.py
scripts/py/: RegressionTest.py
src/: CMakeLists.txt  bf.cpp  bf.h  bfutils.cpp  cli.cpp  tests.cpp
src/argparser/: CMakeLists.txt  argparser.cpp  argparserexception.cpp  argparserresults.cpp  exceptions.cpp  exceptions.h  optionbuilder.cpp  optiondesc.cpp  optionstate.cpp  parameterbuilder.cpp
src/argparser/argparser/: argparser.h
src/bf/: CMakeLists.txt  bf.cpp  bfutils.cpp  compiler.cpp  console.cpp  helpers.cpp  iconsole.cpp  instruction.cpp  interpreter.cpp  readwrite.cpp
src/bf/bf/: bf.h  iconsole.h
src/bf/public/bf/: bf.h  compiler.h  exceptions.h  helpers.h  iconsole.h  instruction.h
src/cli/: CMakeLists.txt  cli.cpp  console.h  unix_console.cpp  unix_console.h  windows_console.cpp  windows_console.h
src/cli/platform/: console.cpp  console.h  exception.cpp  exception.h  exceptions.h  posix_exception.cpp
src/cli/platform/unix/: unix_console.cpp  unix_console.h
src/cli/platform/windows/: windows_console.cpp  windows_console.h
src/tests/: CMakeLists.txt  argparser_tests.cpp  compiler_tests.cpp  instruction_tests.cpp  interpreter_tests.cpp  jumpsearch_tests.cpp  smoke_tests.cpp  test_basics.cpp  testhelpers.cpp  testhelpers.h
tests/: CMakeLists.txt  test_basics.cpp
tests/regression/: 196-commented.args  196-commented.stdout  99botles.args  echo.args  echo.stdout  primes.stdout  reverse.args  reverse.bf  reverse.stdin  reverse.stdout  yapi.stdout
tests/unit/bf/: CMakeLists.txt  compiler_tests.cpp  interpreter_tests.cpp  jumpsearch_tests.cpp  smoke_tests.cpp  testhelpers.cpp
